# nx-arangodb

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  demo.py  phenolrs-0.4.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyproject.toml  run_nx_tests.sh  starter.sh  temp.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/disabled-workflows/: docs.yaml  release.yml
.github/workflows/: analyze.yml  build.yaml  docs.yaml  release.yml
_nx_arangodb/: __init__.py  _version.py  core.py
doc/: conf.py  index.rst  nx_arangodb.ipynb  quickstart.rst  requirements.txt  specs.rst
doc/algorithms/: index.rst
doc/classes/: digraph.rst  graph.rst  index.rst  multidigraph.rst  multigraph.rst
doc/dict/: adj.rst  graph.rst  index.rst  node.rst
doc/views/: coreviews.rst  index.rst  reportviews.rst
docs/: nx_arangodb.ipynb
nx_arangodb/: __init__.py  convert.py  exceptions.py  interface.py  logger.py  typing.py
nx_arangodb/algorithms/: README.md  __init__.py
nx_arangodb/algorithms/centrality/: betweenness.py
nx_arangodb/algorithms/community/: __init__.py  louvain.py
nx_arangodb/algorithms/link_analysis/: pagerank_alg.py
nx_arangodb/algorithms/shortest_paths/: generic.py
nx_arangodb/classes/: __init__.py  coreviews.py  dict.py  digraph.py  enum.py  exceptions.py  function.py  graph.py  multidigraph.py  multigraph.py  reportviews.py
nx_arangodb/classes/dict/: README.md  __init__.py  adj.py  graph.py  node.py
nx_arangodb/classes/digraph/: digraph.py
nx_arangodb/classes/graph/: __init__.py  dict.py  graph.py
nx_arangodb/utils/: __init__.py  arangodb.py  decorators.py  misc.py
tests/: conftest.py  test.py  test_digraph.py  test_gpu.py  test_graph.py  test_multidigraph.py  test_multigraph.py
tests/cpu/: test.py  test_graph.py
tests/gpu/: test_gpu.py
tests/static/: cluster.conf
